--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="Assest/img/favicon-16x16 copia.png">
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
@@ -22,14 +23,20 @@
     <title>PortFolio</title>
 </head>
 <body>
+    <!-- NavBar -->
     <nav class="navbar">
         <img class="logo" src="./Assest/img/PorLogo.jpeg" alt="logo">
+        <div class="menu-icon">
+            <i class="hamb bi bi-list"></i>
+            <i class="bi bi-x-lg"></i>
+        </div>
         <ul class="menu">
             <li><a href="#home-section">Home</a></li>
             <li><a href="#about-section">About</a></li>
             <li><a href="#progetti-section">Progetti</a></li>
             <li><a href="#contatti-section">Contatti</a></li>
         </ul>
+        
     </nav>
     <!-- Home -->
     <div class="content">
