--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
             <i class="hamb bi bi-list"></i>
             <i class="bi bi-x-lg"></i>
         </div>
-        <ul class="menu">
+        <ul class="menu" id="menu">
             <li><a href="#home-section">Home</a></li>
             <li><a href="#about-section">About</a></li>
             <li><a href="#progetti-section">Progetti</a></li>
             <li><a href="#contatti-section">Contatti</a></li>
         </ul>
-        
     </nav>
-    <!-- Home -->
+     <!-- Home -->
     <div class="content">
-        <img class="photo" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
+
+             <img class="photo" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
         <h1 class="title" id="typewriter">
             I'm Daniele, <span class="changeable"> </span>
             
