--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <ul class="menu" id="menu">
                 <li><a href="#home-section">Home</a></li>
                 <li><a href="#about-section">About</a></li>
-                <li><a href="#progetti-section">Projects</a></li>
-                <li><a href="#contatti-section">Contacts</a></li>
+                <li><a href="#progetti-section">Progetti</a></li>
+                <li><a href="#contatti-section">Contatti</a></li>
             </ul>
         </nav>
          <!-- Home -->
@@ -80,12 +80,12 @@
         </div>
         <!-- Progetti -->
         <div class="progettiTitle" id="progetti-section">
-            <h3 class="mt-5 mb-4 text-center project">PROJECTS</h3>
+            <h3 class="mt-5 mb-4 text-center project">PROGETTI</h3>
             <div class="container-card">
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/YogaApp copia.png" class="card-img-top card-img-custom" alt="Yoga App">
+                        <div class=" card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/Count-im.png" class="card-img-top card-img-custom" alt="AppCount">
                             <div class="card-body">
                                 <h5 class="card-title">Yoga App</h5>
                                 <a href="https://app-yoga.vercel.app/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
@@ -93,8 +93,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Fish memory copia.jpeg" class="card-img-top card-img-custom" alt="Fish Memory">
+                        <div class="card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
                                 <h5 class="card-title">Fish Memory </h5>
                                 <a href="https://magiko87.github.io/Fish-Memory/"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
@@ -102,8 +102,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Pig copia.png" class="card-img-top card-img-custom" alt="Pig Game">
+                        <div class=" card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
                                 <h5 class="card-title">Pig Game</h5>
                                 <a href="https://magiko87.github.io/PigGame/"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
@@ -111,8 +111,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/iLibrary copia 2.png" class="card-img-top card-img-custom" alt="iLibrary">
+                        <div class="card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
                                 <h5 class="card-title">iLibrary</h5>
                                 <a href="https://magiko87.github.io/library/dist/index.html"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
@@ -120,8 +120,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4 col-12">
-                        <div class="card custom-card  animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Jump copia.png" class="card-img-top card-img-custom" alt="Jump Game">
+                        <div class="card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
                                 <h5 class="card-title">Jump Game</h5>
                                 <a href="https://magiko87.github.io/Jump-Game/"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
@@ -129,8 +129,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class=" custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Img Quiz copia.png" class="card-img-top card-img-custom" alt="Quiz App">
+                        <div class="card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
                                 <h5 class="card-title">Quiz App</h5>
                                 <a href="https://magiko87.github.io/QuizApp/"  target="_blank" rel="noopener noreferrer"class="btn btn-primary">Open</a>
@@ -138,8 +138,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="card custom-card  animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Guess copia.png" class="card-img-top card-img-custom" alt="Guess my Number">
+                        <div class="card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
                                 <h5 class="card-title">Guess my Number</h5>
                                 <a href="https://magiko87.github.io/GuessMyNumber/"  target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
@@ -155,6 +155,7 @@
                             </div>
                         </div>
                     </div>
+                
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
                         <div class="custom-card  card animate__flipInX fade-in-card custom-shadow text-center">
                             <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
