--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                 <div class="description">
                    <h3>Diplomato in Informatica e Telecomunicazioni,
                     sto attualmente continuando gli studi con 
-                    start2impact University,al fine di ottenere il Master in Front End Developer.</h3>
+                    start2impact University,al fine di ottenere il Master in Front End Developer.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Quam magnam vel corporis minima delectus quidem fuga pariatur dolores ad rerum iure,
+                 eum deleniti aspernatur dolorem reprehenderit aperiam cupiditate similique dignissimos?</h3>
                 </div>
                 <div class="skill">
                     <h3 class="hard-skill">Hard Skill:</h3>
@@ -87,7 +90,7 @@
                             <img src="./Assest/img/YogaApp copia.png" class="card-img-top card-img-custom" alt="Yoga App">
                             <div class="card-body">
                                 <h5 class="card-title">Yoga App</h5>
-                                <a href="https://app-yoga.vercel.app/" class="btn btn-primary">Apri</a>
+                                <a href="https://app-yoga.vercel.app/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -96,7 +99,7 @@
                             <img src="./Assest/img/Fish memory copia.jpeg" class="card-img-top card-img-custom" alt="Fish Memory">
                             <div class="card-body">
                                 <h5 class="card-title">Fish Memory </h5>
-                                <a href="https://magiko87.github.io/Fish-Memory/" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/Fish-Memory/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -105,7 +108,7 @@
                             <img src="./Assest/img/Pig copia.png" class="card-img-top card-img-custom" alt="Pig Game">
                             <div class="card-body">
                                 <h5 class="card-title">Pig Game</h5>
-                                <a href="https://magiko87.github.io/PigGame/" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/PigGame/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -114,7 +117,7 @@
                             <img src="./Assest/img/iLibrary copia 2.png" class="card-img-top card-img-custom" alt="iLibrary">
                             <div class="card-body">
                                 <h5 class="card-title">iLibrary</h5>
-                                <a href="https://magiko87.github.io/library/dist/index.html" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/library/dist/index.html" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +126,7 @@
                             <img src="./Assest/img/Jump copia.png" class="card-img-top card-img-custom" alt="Jump Game">
                             <div class="card-body">
                                 <h5 class="card-title">Jump Game</h5>
-                                <a href="https://magiko87.github.io/Jump-Game/" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/Jump-Game/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -132,7 +135,7 @@
                             <img src="./Assest/img/Img Quiz copia.png" class="card-img-top card-img-custom" alt="Quiz App">
                             <div class="card-body">
                                 <h5 class="card-title">Quiz App</h5>
-                                <a href="https://magiko87.github.io/QuizApp/" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/QuizApp/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -141,7 +144,7 @@
                             <img src="./Assest/img/Guess copia.png" class="card-img-top card-img-custom" alt="Guess my Number">
                             <div class="card-body">
                                 <h5 class="card-title">Guess my Number</h5>
-                                <a href="https://magiko87.github.io/GuessMyNumber/" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/GuessMyNumber/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -150,7 +153,7 @@
                             <img src="./Assest/img/AppMusicPlayer copia.png" class="card-img-top card-img-custom" alt="Music Player">
                             <div class="card-body">
                                 <h5 class="card-title">Music Player</h5>
-                                <a href="https://magiko87.github.io/MusicPlayerApp/" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/MusicPlayerApp/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -160,7 +163,7 @@
                             <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
                                 <h5 class="card-title">Meteo App</h5>
-                                <a href="https://magiko87.github.io/MeteoApp/" class="btn btn-primary">Apri</a>
+                                <a href="https://magiko87.github.io/MeteoApp/" class="btn btn-primary">Open</a>
                             </div>
                         </div>
                     </div>
@@ -176,12 +179,12 @@
                 <form action="https://formspree.io/f/mbjepqdz" method="POST" class="contact-form ">
                     <div class="user-details">
                         <div class="input-box">
-                            <label class="details">Nome *</label>
-                            <input name="nome" type="text" placeholder="Inserisci il nome" required>
+                            <label class="details">Name *</label>
+                            <input name="nome" type="text" placeholder="Insert name" required>
                         </div>
                         <div class="input-box">
-                            <label class="details">Cognome *</label>
-                            <input name="cognome" type="text" placeholder="Inserisci il cognome" required>
+                            <label class="details">Last Name *</label>
+                            <input name="cognome" type="text" placeholder="Insert last name" required>
                         </div>
                         <div class="input-box">
                             <label class="details">E-mail *</label>
@@ -189,11 +192,11 @@
                         </div>
                     </div>
                     <div class="form-textarea">
-                        <label class="details">Messaggio *</label>
-                        <textarea name="message" cols="30" rows="6" placeholder="Scrivi..." required></textarea>
+                        <label class="details">Message *</label>
+                        <textarea name="message" cols="30" rows="6" placeholder="Write..." required></textarea>
                     </div>
                     <div class="button">
-                        <input type="submit" value="Invia">
+                        <input type="submit" value="Submt">
                     </div>
                 </form>
                 <ul class="contact-links">
