--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <nav class="navbar">
             <img class="logo" src="./Assest/img/PorLogo.jpeg" alt="logo">
             <div class="menu-icon">
-                <i class="hamb bi bi-list"></i>
-                <i class="bi bi-x-lg"></i>
+                <i class="hamb bi bi-list" id="open-menu"></i>
+                <i class="cross bi bi-x-lg" id="close-menu"></i>
             </div>
             <ul class="menu" id="menu">
                 <li><a href="#home-section">Home</a></li>
