--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </h1>
         </div>
         <!-- About -->
-        <body class="about" id="about-section">
+        <div class="about" id="about-section">
             <div class="about" id="about-section">
                 <h3 class="aboutTitle">ABOUT</h3>
                 <div class="description">
@@ -226,5 +226,5 @@
         </div>
   </div>
   <script type="text/javascript" src="./Assest/script.js"></script>
-</body>
+</div>
 </html>
