--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </nav>
          <!-- Home -->
         <div class="content">
-                 <img class="photo" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
-            <h1 class="title" id="typewriter">
-                I'm Daniele, <span class="changeable"> </span>  
+                 <img class="photo animate__animated animate__fadeInDownBig" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
+            <h1 class="title animate__animated animate__backInLeft " id="typewriter">
+                I'm Daniele, <span class="changeable " > </span>  
             </h1>
         </div>
         <!-- About -->
@@ -80,7 +80,7 @@
         </div>
         <!-- Progetti -->
         <div class="progettiTitle" id="progetti-section">
-            <h3 class="mt-5 mb-4 text-center project">PROJECTS</h3>
+            <h3 class="proj-animat mt-5 mb-4 text-center project">PROJECTS</h3>
             <div class="container-card">
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
