--- a/index.html
+++ b/index.html
@@ -175,20 +175,20 @@
                     <div class="user-details">
                         <div class="input-box">
                             <label class="details">Name *</label>
-                            <input name="nome" type="text" placeholder="Insert name" required>
+                            <input name="nome" type="text" placeholder="Your name" required>
                         </div>
                         <div class="input-box">
                             <label class="details">Last Name *</label>
-                            <input name="cognome" type="text" placeholder="Insert last name" required>
+                            <input name="cognome" type="text" placeholder="Your last name" required>
                         </div>
                         <div class="input-box">
                             <label class="details">E-mail *</label>
-                            <input name="email" type="email" placeholder="Insert l'email" required>
+                            <input name="email" type="email" placeholder="Your e-mail" required>
                         </div>
                     </div>
                     <div class="form-textarea">
                         <label class="details">Message *</label>
-                        <textarea name="message" cols="30" rows="6" placeholder="Write..." required></textarea>
+                        <textarea name="message" cols="30" rows="6" placeholder="Message...." required></textarea>
                     </div>
                     <div class="button">
                         <input type="submit" value="Submt">
