--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
             </ul>
         </nav>
          <!-- Home -->
+         <div class="tit-w animate__animated animate__backInLeft">
+            <h1>Welcome to my WebSite</h1>
+         </div>
         <div class="content">
                  <img class="photo animate__animated animate__fadeInDownBig" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
-            <h1 class="title animate__animated animate__backInLeft " id="typewriter">
+            <h1 class="title animate__animated animate__backInRight " id="typewriter">
                 I'm Daniele, <span class="changeable " > </span>  
             </h1>
         </div>
