--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
             </ul>
         </nav>
          <!-- Home -->
-         <div class="tit-w animate__animated animate__backInLeft">
-            <h1>Welcome to my WebSite</h1>
-         </div>
-        <div class="content">
-                 <img class="photo animate__animated animate__fadeInDownBig" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
+         <div class="content">
+             <div class="tit-w animate__animated animate__backInLeft">
+                 <h1>Welcome to my WebSite!</h1>
+                </div>
+                <div class="photo-cont">
+                    <img class="photo" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
+                </div>
             <h1 class="title animate__animated animate__backInRight " id="typewriter">
                 I'm Daniele, <span class="changeable " > </span>  
             </h1>
+        </div>
         </div>
         <!-- About -->
         <div class="about" id="about-section">
