--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                  <h1>Welcome to my WebSite!</h1>
                 </div>
                 <div class="photo-cont">
-                    <img class="photo" src="./Assest/img/me-r copia.jpeg" alt="Daniele Camodeca">
+                    <img class="photo" src="./Assest/img/io.jpeg" alt="Daniele Camodeca">
                 </div>
             <h1 class="title animate__animated animate__backInRight " id="typewriter">
                 I'm Daniele, <span class="changeable " > </span>  
@@ -57,12 +57,9 @@
             <div class="about" id="about-section">
                 <h3 class="aboutTitle">ABOUT</h3>
                 <div class="description">
-                   <h3>Diplomato in Informatica e Telecomunicazioni,
-                    sto attualmente continuando gli studi con 
-                    start2impact University,al fine di ottenere il Master in Front End Developer.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Quam magnam vel corporis minima delectus quidem fuga pariatur dolores ad rerum iure,
-                 eum deleniti aspernatur dolorem reprehenderit aperiam cupiditate similique dignissimos?</h3>
+                   <h3>Graduated in Information Technology and Telecommunications,
+                    I am currently continuing my studies with
+                    start2impact University, in order to obtain the Master in Front End Developer.</h3>
                 </div>
                 <div class="skill">
                     <h3 class="hard-skill">Hard Skill:</h3>
