--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+                        <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+                            <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
+                                <img src="./Assest/img/iLibrary copia 2.png" class="card-img-top card-img-custom" alt="iLibrary">
+                                <div class="card-body">
+                                    <h5 class="card-title">iLibrary</h5>
+                                    <a href="https://magiko87.github.io/library/dist/index.html"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
+                                </div>
+                            </div>
+                        </div>        
+                        <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+                            <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
+                                <img src="./Assest/img/AppMusicPlayer copia.png" target="_blank" rel="noopener noreferrer" class="card-img-top card-img-custom" alt="Music Player">
+                                <div class="card-body">
+                                    <h5 class="card-title">Music Player</h5>
+                                    <a href="https://magiko87.github.io/MusicPlayerApp/" target="_blank" rel="noopener noreferrer"  class="btn btn-primary">Open</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
                             <img src="./Assest/img/Fish memory copia.jpeg" class="card-img-top card-img-custom" alt="Fish Memory">
                             <div class="card-body">
@@ -105,61 +123,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Pig copia.png" class="card-img-top card-img-custom" alt="Pig Game">
-                            <div class="card-body">
-                                <h5 class="card-title">Pig Game</h5>
-                                <a href="https://magiko87.github.io/PigGame/"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/iLibrary copia 2.png" class="card-img-top card-img-custom" alt="iLibrary">
-                            <div class="card-body">
-                                <h5 class="card-title">iLibrary</h5>
-                                <a href="https://magiko87.github.io/library/dist/index.html"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-4 col-12">
-                        <div class="card custom-card  animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Jump copia.png" class="card-img-top card-img-custom" alt="Jump Game">
-                            <div class="card-body">
-                                <h5 class="card-title">Jump Game</h5>
-                                <a href="https://magiko87.github.io/Jump-Game/"target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class=" custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Img Quiz copia.png" class="card-img-top card-img-custom" alt="Quiz App">
-                            <div class="card-body">
-                                <h5 class="card-title">Quiz App</h5>
-                                <a href="https://magiko87.github.io/QuizApp/"  target="_blank" rel="noopener noreferrer"class="btn btn-primary">Open</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="card custom-card  animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/Guess copia.png" class="card-img-top card-img-custom" alt="Guess my Number">
-                            <div class="card-body">
-                                <h5 class="card-title">Guess my Number</h5>
-                                <a href="https://magiko87.github.io/GuessMyNumber/"  target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
-                            <img src="./Assest/img/AppMusicPlayer copia.png" target="_blank" rel="noopener noreferrer" class="card-img-top card-img-custom" alt="Music Player">
-                            <div class="card-body">
-                                <h5 class="card-title">Music Player</h5>
-                                <a href="https://magiko87.github.io/MusicPlayerApp/" target="_blank" rel="noopener noreferrer"  class="btn btn-primary">Open</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+                        <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
                         <div class="custom-card  card animate__flipInX fade-in-card custom-shadow text-center">
                             <img src="./Assest/img/cover.png" class="card-img-top card-img-custom" alt="MeteoApp">
                             <div class="card-body">
@@ -195,7 +159,7 @@
                         <textarea name="message" cols="30" rows="6" placeholder="Message...." required></textarea>
                     </div>
                     <div class="button">
-                        <input type="submit" value="Submt">
+                        <input type="submit" value="Submit">
                     </div>
                 </form>
                 <ul class="contact-links">
