--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                 <h3 class="aboutTitle">ABOUT</h3>
                 <div class="description">
                    <h3>Graduated in Information Technology and Telecommunications,
-                    I am currently continuing my studies with
-                    start2impact University, in order to obtain the Master in Front End Developer.</h3>
+                    i continued my studies with start2impact University obtaining a master's degree in Front End Developer.</h3>
                 </div>
                 <div class="skill">
                     <h3 class="hard-skill">Hard Skill:</h3>
@@ -87,6 +86,15 @@
             <h3 class="proj-animat mt-5 mb-4 text-center project">PROJECTS</h3>
             <div class="container-card">
                 <div class="row justify-content-center">
+                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                        <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
+                            <img src="./Assest/img/CovidTracker.png" class="card-img-top card-img-custom" alt="Covid Tracker">
+                            <div class="card-body">
+                                <h5 class="card-title">Covid Tracker</h5>
+                                <a href="https://covid-tracker-magiko87.vercel.app" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Open</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="custom-card card animate__flipInX fade-in-card custom-shadow text-center">
                             <img src="./Assest/img/YogaApp copia.png" class="card-img-top card-img-custom" alt="Yoga App">
