--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                        <img src="./Assest/img/Skill/Vercel copia 2.png" alt="Vercel">
              </div>
              <div class="d-grid gap-2 col-6 mx-auto">
-                <a  href="./Assest/img/Curriculum_DC-compresso copia.pdf" class=" btn-cv" target="_blank" rel="noopener noreferrer" download>Download CV</a>
+                <a  href="./Assest/img/Curriculum P copia.pdf" class=" btn-cv" target="_blank" rel="noopener noreferrer" download>Download CV</a>
               </div>    
         </div>
         <!-- Progetti -->
